--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <section id="press">
     <a href="https://techcrunch.com/" target="_blank">
-      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+      <img class="press-logo" src="images/Techcrunch.png" alt="tc-logo">
     </a>
     <a href="https://thenextweb.com/" target="_blank">
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
